[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Naves/Wey/Wey_Base2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Naves/Wey/Wey_Base3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Naves/Wey/Wey_Ré1.png" type="Texture" id=3]
[ext_resource path="res://Ship - Copia.gd" type="Script" id=4]
[ext_resource path="res://Assets/Naves/Wey/Wey_Ré2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Naves/Wey/Wey_Ré3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Naves/Wey/Wey_Base1.png" type="Texture" id=7]
[ext_resource path="res://Assets/FX/Explosion_BLUE4.png" type="Texture" id=14]
[ext_resource path="res://Assets/FX/Explosion_BLUE5.png" type="Texture" id=15]
[ext_resource path="res://Assets/FX/Explosion_BLUE1.png" type="Texture" id=16]
[ext_resource path="res://Assets/FX/Explosion_BLUE3.png" type="Texture" id=17]
[ext_resource path="res://Assets/FX/Explosion_BLUE2.png" type="Texture" id=18]

[sub_resource type="PhysicsMaterial" id=6]
friction = 0.0
bounce = 0.2

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "Stop",
"speed": 6.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Still",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": false,
"name": "Explode",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "Dash",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "Thrust",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Break",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": false,
"name": "Explode",
"speed": 5.0
} ]

[sub_resource type="CanvasItemMaterial" id=9]

[sub_resource type="CapsuleShape2D" id=10]
radius = 14.0
height = 26.0

[sub_resource type="CapsuleShape2D" id=11]
radius = 11.0

[sub_resource type="CapsuleShape2D" id=12]
radius = 9.99999
height = 6.00002

[node name="Ship 2" type="RigidBody2D"]
rotation = 1.5708
collision_layer = 16
collision_mask = 39
mass = 1.33
physics_material_override = SubResource( 6 )
gravity_scale = 0.0
script = ExtResource( 4 )
engine_thrust = 190
spin_thrust = 4000

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.53518e-06, -1 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 2 )
animation = "Still"
playing = true

[node name="Explode" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 10, 8.99994 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 8 )
animation = "Explode"
offset = Vector2( -54.5938, -57.556 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 12.9998, -59 )

[node name="Angel_Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
material = SubResource( 9 )
position = Vector2( 14, -13.0001 )
shape = SubResource( 10 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2( -17, 6.00006 )
shape = SubResource( 11 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="."]
position = Vector2( 14.0001, 21 )
shape = SubResource( 12 )

[connection signal="body_entered" from="." to="." method="_on_Ship_2_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Ship_2_body_shape_entered"]
[connection signal="animation_finished" from="Explode" to="." method="_on_Explode_animation_finished"]
[connection signal="timeout" from="Angel_Timer" to="." method="_on_Angel_Timer_timeout"]
